Kata 4 solved